Bootstrap fixes, styles

--- a/poupon-web/public/index.html
+++ b/poupon-web/public/index.html
@@ -24,7 +24,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
-  <body>
+  <body style="background: url('%PUBLIC_URL%/background.jpg') no-repeat center center fixed; background-size: cover;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
