--- a/poupon-web/public/index.html
+++ b/poupon-web/public/index.html
@@ -22,6 +22,7 @@
     <title>React App</title>
 
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Germania+One|Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
   <body style="background: url('%PUBLIC_URL%/background.jpg') no-repeat center center fixed; background-size: cover;">
