--- a/dataviz-dev/map.html
+++ b/dataviz-dev/map.html
@@ -4,6 +4,9 @@
 	<title>dataviz map test</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+	<script src="https://d3js.org/d3-color.v1.min.js"></script>
+	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="datamaps.world.min.js"></script>
 	<script src="map.js" defer></script>
 </head>
