--- a/poupon-web/public/dataviz/map.html
+++ b/poupon-web/public/dataviz/map.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>dataviz map test</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+	<title></title>
+	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script> 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 	<script src="https://d3js.org/d3-color.v1.min.js"></script>
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="datamaps.world.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="page.css">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
+	
 	<script src="map.js" defer></script>
+	<style type="text/css">
+		html, body: {
+			padding: 0;
+			margin: 0;
+		}
+	</style>
 </head>
 <body>
-	<div id="map-container" style="width: 800px; height: 600px;"></div>
+	<div id="map-container" style="width: 100%; height: 600px;"></div>
 </body>
 </html>
