Corrected relative paths to absolute in dataviz

--- a/poupon-web/public/dataviz/index.html
+++ b/poupon-web/public/dataviz/index.html
@@ -7,16 +7,16 @@
 	<script src="https://d3js.org/d3-color.v1.min.js"></script>
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-	<script type="text/javascript" src="d3tip.js"></script>
-	<script type="text/javascript" src="d3-scale.min.js"></script>
-	<script type="text/javascript" src="d3-axis.min.js"></script>
-	<script src="datamaps.world.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="page.css">
+	<script type="text/javascript" src="/dataviz/d3tip.js"></script>
+	<script type="text/javascript" src="/dataviz/d3-scale.min.js"></script>
+	<script type="text/javascript" src="/dataviz/d3-axis.min.js"></script>
+	<script src="/dataviz/datamaps.world.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/dataviz/page.css">
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
 	
-	<script src="map.js" defer></script>
-	<script src="abv.js" defer></script>
-	<link rel="stylesheet" type="text/css" href="abv.css">
+	<script src="/dataviz/map.js" defer></script>
+	<script src="/dataviz/abv.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="/dataviz/abv.css">
 </head>
 <body>
 	<div class="container">
