--- a/poupon-web/public/dataviz/map.html
+++ b/poupon-web/public/dataviz/map.html
@@ -7,11 +7,11 @@
 	<script src="https://d3js.org/d3-color.v1.min.js"></script>
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-	<script src="datamaps.world.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="page.css">
+	<script src="/dataviz/datamaps.world.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/dataviz/page.css">
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Oswald" rel="stylesheet">
 	
-	<script src="map.js" defer></script>
+	<script src="/dataviz/map.js" defer></script>
 	<style type="text/css">
 		html, body: {
 			padding: 0;
