Removed service worker and fixed dataviz map embed

--- a/poupon-web/public/dataviz/index.html
+++ b/poupon-web/public/dataviz/index.html
@@ -23,7 +23,7 @@
 		<div class="superheader">Tipsymix Dataviz</div>
 		<h1>Cocktails per Country</h1>
 		<h3>Shows the number of cocktails in the Tipsymix database for each country.</h3>
-		<iframe src="map.html" style="border: none; width: 100%; height: 600px; overflow-y: hidden;" scrolling="no"></iframe>
+		<iframe src="/dataviz/map.html" style="border: none; width: 100%; height: 600px; overflow-y: hidden;" scrolling="no"></iframe>
 
 		<h1>ABV per Ingredient</h1>
 		<h3>Shows the ABV of each cocktail.</h3>
