Initial customization of styles

--- a/poupon-web/public/index.html
+++ b/poupon-web/public/index.html
@@ -22,7 +22,7 @@
     <title>Grey Poupon</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Germania+One|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Merriweather" rel="stylesheet">
 </head>
 <body style="background: url('%PUBLIC_URL%/background.jpg') no-repeat center center fixed; background-size: cover;">
 <noscript>
